--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
 	"name": "04-backendserver",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.ts",
+	"main": "src/index.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon index.ts"
+		"dev": "nodemon src/index.ts"
 	},
 	"keywords": [],
 	"author": "Orlando Montes",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.18.2"
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"mongoose": "^7.1.1"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
 		"@types/node": "^20.1.7",
 		"nodemon": "^2.0.22",
