--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,23 +29,9 @@
 		"moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
 		"baseUrl": "./" /* Specify the base directory to resolve non-relative module names. */,
 		"paths": {
-			"@modMocReport/*": ["./src/app/module/moc/module/report/*"],
-			"@modMocAction/*": ["./src/app/module/moc/module/action/*"],
-			"@modMoc/*": ["./src/app/module/moc/*"],
-			"@modRhmArchive/*": ["./src/app/module/rhm/module/archive/*"],
-			"@modRhm/*": ["./src/app/module/rhm/*"],
-			"@modTicDesti/*": ["./src/app/module/tic/module/desti/*"],
-			"@modTicCdist/*": ["./src/app/module/tic/module/cdist/*"],
-			"@modTic/*": ["./src/app/module/tic/*"],
-			"@modGen/*": ["./src/app/module/gen/*"],
-			"@modUse/*": ["./src/app/module/use/*"],
-			"@module/*": ["./src/app/module/*"],
-			"@base/*": ["./src/app/base/*"],
-			"@apiSap/*": ["./src/app/api/sap/*"],
-			"@apiAzure/*": ["./src/app/api/azure/*"],
-			"@api/*": ["./src/app/api/*"],
-			"@app/*": ["./src/app/*"],
-			"@src/*": ["./src/*"],
+			"@srcBase/*": ["src/base/*"],
+			"@messages/*": ["src/messages/*"],
+			"@modUsers/*": ["src/module/users/*"],
 		} /* Specify a set of entries that re-map imports to additional lookup locations. */,
 		// "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
 		// "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
