--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
 		"paths": {
 			"@srcBase/*": ["src/base/*"],
 			"@messages/*": ["src/messages/*"],
-			"@modUsers/*": ["src/module/users/*"],
+			"@modUsers/*": ["src/module/users/*"]
 		} /* Specify a set of entries that re-map imports to additional lookup locations. */,
 		// "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
 		// "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
@@ -93,7 +93,7 @@
 		// "noImplicitReturns": true /* Enable error reporting for codepaths that do not explicitly return in a function. */,
 		// "noFallthroughCasesInSwitch": true,               /* Enable error reporting for fallthrough cases in switch statements. */
 		// "noUncheckedIndexedAccess": true,                 /* Include 'undefined' in index signature results */
-		// "noImplicitOverride": true,                       /* Ensure overriding members in derived classes are marked with an override modifier. */
+		"noImplicitOverride": true /* Ensure overriding members in derived classes are marked with an override modifier. */,
 		// "noPropertyAccessFromIndexSignature": true,       /* Enforces using indexed accessors for keys declared using an indexed type */
 		// "allowUnusedLabels": true,                        /* Disable error reporting for unused labels. */
 		// "allowUnreachableCode": true,                     /* Disable error reporting for unreachable code. */
