11.Enrutador, carpetas base de hospitales. Post de hospitales

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
 		"paths": {
 			"@srcBase/*": ["src/base/*"],
 			"@messages/*": ["src/messages/*"],
-			"@modUsers/*": ["src/module/users/*"]
+			"@modUsers/*": ["src/module/users/*"],
+			"@modHospital/*": ["src/module/hospital/*"]
 		} /* Specify a set of entries that re-map imports to additional lookup locations. */,
 		// "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
 		// "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
