--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"_moduleAliases": {
 		"@srcBase": "src/base",
 		"@messages": "src/messages",
-		"@modUsers": "src/module/users"
+		"@modUsers": "src/module/users",
+		"@modHospital": "src/module/hospital"
 	}
 }
