--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
 			"@srcBase/*": ["src/base/*"],
 			"@messages/*": ["src/messages/*"],
 			"@modUsers/*": ["src/module/users/*"],
-			"@modHospital/*": ["src/module/hospital/*"]
+			"@modHospital/*": ["src/module/hospital/*"],
+			"@modDoctor/*": ["src/module/doctors/*"]
 		} /* Specify a set of entries that re-map imports to additional lookup locations. */,
 		// "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
 		// "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
