--- a/package.json
+++ b/package.json
@@ -12,20 +12,25 @@
 	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^5.1.0",
+		"body-parser": "^1.20.2",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
+		"express-fileupload": "^1.4.0",
 		"express-validator": "^7.0.1",
 		"jsonwebtoken": "^9.0.0",
 		"module-alias": "^2.2.2",
-		"mongoose": "^7.1.1"
+		"mongoose": "^7.1.1",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
+		"@types/express-fileupload": "^1.4.1",
 		"@types/jsonwebtoken": "^9.0.2",
 		"@types/node": "^20.1.7",
+		"@types/uuid": "^9.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.59.11",
 		"@typescript-eslint/parser": "^5.59.11",
 		"nodemon": "^2.0.22",
@@ -37,6 +42,7 @@
 		"@messages": "src/messages",
 		"@modUsers": "src/module/users",
 		"@modHospital": "src/module/hospital",
-		"@modDoctor": "src/module/doctors"
+		"@modDoctor": "src/module/doctors",
+		"@modUploads": "src/module/uploads"
 	}
 }
