--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
 			"@messages/*": ["src/messages/*"],
 			"@modUsers/*": ["src/module/users/*"],
 			"@modHospital/*": ["src/module/hospital/*"],
-			"@modDoctor/*": ["src/module/doctors/*"]
+			"@modDoctor/*": ["src/module/doctors/*"],
+			"@modUploads/*": ["src/module/uploads/*"]
 		} /* Specify a set of entries that re-map imports to additional lookup locations. */,
 		// "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
 		// "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
